--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -6,12 +6,12 @@ on:
       - main
 
 jobs:
-  build:
+  module3_task0:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the help target
         uses: actions/checkout@v3
       - name: cd to directory containing symlink
         run: |
-          cd module3_task0/
+          cd module3_task0
           make help
