adding on schedule to yml file, to trigger workflow everyday at given hour (free choice)

--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+  schedule:
+    # * is special character quote it!
+    # trigger the workflow every day at 5:30 and 17:30 UTC
+    - cron: '30 5,17 * * *'
 
 jobs:
   module3_task0:
