--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -10,7 +10,7 @@ on:
     - cron: '30 10 * * *'
 
 jobs:
-  Display help:
+  module3_task0_display_help:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the help target
