--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -10,12 +10,12 @@ on:
     - cron: '30 10 * * *'
 
 jobs:
-  module3_task0_display_help:
+  module3_task0_make_build_workflow:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the help target
+      - name: Checkout the build target
         uses: actions/checkout@v3
-      - name: cd to directory containing symlink
+      - name: lint
         run: |
           cd module3_task0
-          make help
+          make lint
