--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -1,3 +1,4 @@
+SHELLSHECK=shellcheck
 
 help: ## showing help documentation
 	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
@@ -10,4 +11,4 @@ post:		## Create a new blog post whose filename and title come from env var POST
 # -i option to edit file in place
 	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 lint:
-	shellcheck *.sh
+	($SHELLSHECK) setup.sh >/dev/null 2>&1 || echo "Lint Failed"
