--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -10,4 +10,4 @@ post:		## Create a new blog post whose filename and title come from env var POST
 # -i option to edit file in place
 	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 lint:
-	yq -r '.[".sh"]' .gitlab-ci.template.yml 
+	yq -r '.[".sh"]' .github-workflow.yml | shellcheck
