--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -13,7 +13,7 @@ lint: ## runs linter for .md file and shell script
 	markdownlint README.md DEPLOY.md
 	shellcheck setup.sh
 
-unit-test: ## runs several steps of make to test the functionality
+unit-tests: ## runs several steps of make to test the functionality
 	make POST_TITLE='Hot test' POST_NAME='what's love got to do with it?' post
 	make build
 	make clean
