fighting with checker

--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -17,6 +17,10 @@ unit-tests: ## runs several steps of make to test the functionality
 	make POST_TITLE='Hot test' POST_NAME='what's love got to do with it?' post
 	make build
 	make clean
+
+integration-tests: ## runs post and build command to check for integration success
+	make POST_TITLE='Integration Party' POST_NAME='Please let me be part of the party' post
+	make build
 package: ## creates an archive 
 	make build
 	zip awesome-website.zip dist/
