lauching the actions again

--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -39,7 +39,7 @@ jobs:
           make unit-tests
           make package
           make clean
-      - name: build the archive
+      - name: build the archive if success
         # if none of previous steps have failed, success returns true
         if: ${{ success()}}
         uses: actions/upload-artifact@v3
