--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           cd module3_task2
           make build
+      - name: post
+        run: |
+          cd module3_task2
+          make POST_TITLE='Test' POST='TestSuccess' post
       - name: Unit testing
         run: |
           cd module3_task2
@@ -39,7 +43,7 @@ jobs:
           make unit-tests
           make package
           make clean
-      - name: build the archive if success
+      - name: build the archive
         # if none of previous steps have failed, success returns true
         if: ${{ success()}}
         uses: actions/upload-artifact@v3
