--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           cd module3_task2
           make validate
-          make integration_tests
+          make integration-tests
           make unit-tests
           make package
           make clean
