--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -11,3 +11,12 @@ post:		## Create a new blog post whose filename and title come from env var POST
 	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 lint:
 	shellcheck setup.sh
+unit-tests: ## runs several steps of make to test the functionality
+	make build
+	make clean
+
+integration-tests: ## runs post and build command to check for integration success
+	make POST_TITLE=IntegrationTest POST_NAME='Zanzibar' post
+	make build
+validate: ## validate that we are in the correct directory
+	pwd
