changing post title and name to avoid conflicts when testing

--- a/module3_task3/Makefile
+++ b/module3_task3/Makefile
@@ -14,7 +14,7 @@ lint: ## runs linter for .md file and shell script
 	shellcheck setup.sh
 
 unit-tests: ## runs several steps of make to test the functionality
-	make POST_TITLE=IntegrationTest POST_NAME='Zanzibar' post
+	make POST_TITLE=IntegrationTestRel POST_NAME='Zanzibar2' post
 	make build
 	make clean
 
