--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -21,5 +21,7 @@ jobs:
     steps:
       # Drafts your next release notes as pull requests
       - uses: release-drafter/release-drafter@v5
+        with:
+          publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
