--- a/.github/workflows/module3_task5.yml
+++ b/.github/workflows/module3_task5.yml
@@ -9,6 +9,7 @@ on:
     # trigger the workflow every day at 5:30 and 17:30 UTC
     - cron: '30 10 * * *'
   pull_request:
+    types: [opened, reopened, edited, ready_for_review]
 jobs:
   module3_task5_make_build_workflow:
     runs-on: ubuntu-18.04
@@ -60,7 +61,7 @@ jobs:
           publish-dir: './dist'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: 'Deploy from GitHub Actions'
+          deploy-message: 'Published on Netlify'
           enable-pull-request-comment: true
           enable-commit-comment: true
           overwrites-pull-request-comment: true
