--- a/.github/workflows/module3_task5.yml
+++ b/.github/workflows/module3_task5.yml
@@ -61,7 +61,7 @@ jobs:
           publish-dir: './dist'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: 'Published on Netlify'
+          deploy-message: '🎉 Published on'
           enable-pull-request-comment: true
           enable-commit-comment: true
           overwrites-pull-request-comment: true
