--- a/.github/workflows/module3_task5.yml
+++ b/.github/workflows/module3_task5.yml
@@ -58,7 +58,7 @@ jobs:
       - name: deploy
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: './dist'
+          publish-dir: './module3_task5/dist'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: '🎉 Published on'
