--- a/module3_task5/Makefile
+++ b/module3_task5/Makefile
@@ -14,7 +14,7 @@ lint: ## runs linter for .md file and shell script
 	shellcheck setup.sh
 
 unit-tests: ## runs several steps of make to test the functionality
-	make POST_TITLE=TestPull POST_NAME='pullTest' post
+	make POST_TITLE=TestNetlify POST_NAME='TestNet' post
 	make build
 	make clean
 
