--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "module3_task5/themes/ananke"]
 	path = module3_task5/themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "module4_task0/themes/ananke"]
+	path = module4_task0/themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke
