--- a/module4_task0/Makefile
+++ b/module4_task0/Makefile
@@ -3,6 +3,7 @@ help: ## showing help documentation
 	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 build:		## Generates the website from the markdown and configuration files (inside dist/)
 	hugo
+	touch ./awesome-api
 clean:		## Cleanup the content of the directory dist/
 	rm -rf dist/*
 post:		## Create a new blog post whose filename and title come from env var POST_TITLE and POST_NAME
