--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -30,4 +30,4 @@ package: ## creates an archive
 	zip awesome-website.zip dist/
 
 build-docker: ## build the docker image named awesome-build
-	docker build -t awesome-build ./build/Dockerfile
+	docker image build -t awesome-build ./build
