--- a/module2_task0/Makefile
+++ b/module2_task0/Makefile
@@ -6,6 +6,7 @@ run: ## run: Run the app in background by executing the binary
 stop: ## stop: stop the application using shell command "kill"
 	pgrep awesome-api | xargs kill
 clean: ## clean: Delete the binary and the log file
+	make stop
 	rm -rf awesome-api
 	rm awesome.log
 test: ## test: run tests to ensure it behaves as expected
