--- a/module6_task0/jenkins/Dockerfile
+++ b/module6_task0/jenkins/Dockerfile
@@ -2,6 +2,6 @@ FROM jenkins/jenkins:lts-jdk11
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 ENV CASC_JENKINS_CONFIG /var/jenkins_home/casc.yaml
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
-COPY casc.yaml /var/jenkins_home/casc.yaml
-COPY seedjob.groovy /usr/local/seedjob.groovy
+# COPY casc.yaml /var/jenkins_home/casc.yaml
+# COPY seedjob.groovy /usr/local/seedjob.groovy
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
