--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -7,7 +7,7 @@ build: ## build: compile source code of application to a binary
 run: ## run: Run the app in background by executing the binary
 	./awesome-api >./awesome.log 2>&1 &
 stop: ## stop: stop the application using shell command "kill"
-	pgrep awesome-api | xargs kill
+	kill "$(shell pgrep awesome-api)"
 clean: ## clean: Delete the binary and the log file
 	make stop
 	rm -rf awesome-api
